--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,11 +1,11 @@
-<%= link_to '新規投稿', new_blog_path %>
+<%= link_to 'New post', new_blog_path %>
 <p><%= notice %></p>
 <table>
   <tr>
-    <th>タイトル</th>
-    <th>内容</th>
-    <th>投稿者</th>
-    <th>画像</th>
+    <th>Title</th>
+    <th>Content</th>
+    <th>Author</th>
+    <th>Picture</th>
   </tr>
   <p><% @blogs.each do |blog| %></p>
   <tr>
@@ -13,7 +13,7 @@
     <td><%= blog.content %></td>
     <td><%= blog.user.name %></td>
     <td><%= image_tag blog.image.url if blog.image && blog.image.url %></td>
-    <td><%= link_to '詳細を確認する', blog_path(blog.id) %></td>
+    <td><%= link_to 'Show details', blog_path(blog.id) %></td>
   </tr>
 <% end %>
 </table>
