--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: @blog, local: true) do |f| %>
-  <% if blog.errors.any? %>
+  <% if @blog.errors.any? %>
     <div id="error_explanation" >
       <h2><%= @blog.errors.count %>errors</h2>
       <ul>
@@ -10,7 +10,7 @@
     </div>
   <% end %>
     <div class="blog_title">
-      <%= form.label :title %>
+      <%= f.label :title %>
       <%= f.text_field :title %>
     </div>
     <div class="blog_title">
