--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -2,7 +2,7 @@
 <%= form_with(model: @blog, url: blogs_path, local: true) do |f| %>
   <%= f.hidden_field :title %>
   <%= f.hidden_field :content %>
-  <%= image_tag(@blog.image.url) if @picture.image && @picture.image.url %>
+  <%= image_tag(@blog.image.url) if @blog.image && @blog.image.url %>
   <%= f.hidden_field :image_caache %>
   <%= f.hidden_field :name %>
   <p>Title:<%= @blog.title %></p>
