--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -4,8 +4,8 @@
 <p>Author: <%= @blog.user.name %></p>
 
 <p id="notice"><%= notice %></p>
-<p><%= image_tag @blog.image.url if @picture.image.present? %></p>
-<% if @picture_.user_id == current_user.id %>
+<p><%= image_tag @blog.image.url if @blog.image.present? %></p>
+<% if @blog.user_id == current_user.id %>
   <%= link_to 'Edit', edit_blog_path(@blog) %>
   <%= link_to 'Delete', blog_path(@blog), method: :delete ,data: { confirm: 'Delete？' } %>
 <% end %>
@@ -13,7 +13,7 @@
   <% if @favorite.present? %>
     <%= link_to 'Delete', favorite_path(id: @favorite.id), method: :delete, class: 'btn btn_danger' %>
   <% else %>
-    <%= link_to 'To favorites', favorites_path(blog_id: @picture.id), method: :post, class: 'btn btn-pry mary' %>
+    <%= link_to 'To favorites', favorites_path(blog_id: @blog.id), method: :post, class: 'btn btn-pry mary' %>
   <% end %>
 <% end %>
 
