--- a/app/views/blogs/confirm.html.erb
+++ b/app/views/blogs/confirm.html.erb
@@ -3,7 +3,7 @@
   <%= f.hidden_field :title %>
   <%= f.hidden_field :content %>
   <%= image_tag(@blog.image.url) if @blog.image && @blog.image.url %>
-  <%= f.hidden_field :image_caache %>
+  <%= f.hidden_field :image_cache %>
   <%= f.hidden_field :name %>
   <p>Title:<%= @blog.title %></p>
   <p>Content:<%= @blog.content %></p>
