--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+header {
+    background-color:lightsteelblue;
+    line-height:60px;
+    width: 100%;
+}
+html {
+    background-color:whitesmoke;
+}
+body {
+    text-align: center;
+}
